sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:17: error: value F is not a member of Unit
possible cause: maybe a semicolon is missing before `value F'?
  	}F=F-1
         ^