sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var Change1: Boolean=true
  var F =getNombreValeurs()-2
  var D = 0
  
  while (Change1==true){
  	Change1=false
    
    for (i<-D to F){
      if (getValeur(i) > getValeur(i+1)){
        echange(i,i+1)

       	Change1=true
          
    	}
  	}F=F-1

 	  for (i<- F to D by -1 ){
      if (getValeur(i) < getValeur(i+1)){
        echange(i,i+1)
       
      	Change1=true
  		}
    D=D+1
  	}     

  
  
	}
}